syntax = "proto3";

option csharp_namespace = "OrderService.Protos";

package orders;

service OrderService{
	rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest{
	string orderId = 1;
}

message OrderResponse{
	string orderId = 1;
	string product = 2;
	double price = 3;
}